k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: farmers-backend
  labels:
    app: farmers
spec:
  replicas: 2
  selector:
    matchLabels:
      app: farmers-backend
  template:
    metadata:
      labels:
        app: farmers-backend
    spec:
      containers:
      - name: farmers-backend
        image: prasnthdocker/backend:v1
        ports:
        - containerPort: 5000
