k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: farmers-frontend
  labels:
    app: farmers-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: farmers-frontend
  template:
    metadata:
      labels:
        app: farmers-frontend
    spec:
      containers:
      - name: farmers-backend
        image: prasnthdocker/frontend:v1
        ports:
        - containerPort: 80
