k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: farmers-backend-service
  labels:
    app: farmers-backend
spec:
  selector:
    app: farmers-backend
  ports:
    - targetPort: 5000
      port: 5000
  type: NodePort
