k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: farmers-frontend-service
  labels:
    app: farmers-frontend
spec:
  selector:
    app: farmers-frontend
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
